@@ -1,14 +1,23 @@
-# PrestoDB-TiDB-Connector
+# Hive-TiDB-Storage-Handler
 
 ## 1 Environment
 
-| Component | Version |
-|-----------|---------|
-| JDK       | 8       |
-| Maven     | 3.6+    |
-| PrestoDB  | 0.234.2 |
+| Component | Version         |
+|-----------|-----------------|
+| JDK       | 8               |
+| Maven     | 3.6+            |
+| Hive      | 1.x / 2.x / 3.x |
 
-## 2 Compile PrestoDB Connector
+Hive Version to TiBigData Module：
+
+| Hive Version  | TiBigData Module |
+|---------------|------------------|
+| 1.0.0 - 1.2.2 | hive-2.2.0       |
+| 2.0.0 - 2.2.0 | hive-2.2.0       |
+| 2.3.0 - 2.3.6 | hive-2.3.6       |
+| 3.0.0 - 3.1.2 | hive-3.1.2       |
+
+## 2 Compile Hive Storage Handler
 
 Please refer to the following steps, as the comments say, you need to compile the TiKV java client before you compile TiBigData, because TiBigData preempts some new features that are not released in the TiKV java client.
 
@@ -18,254 +27,161 @@ git clone git@github.com:tidb-incubator/TiBigData.git
 cd TiBigData
 # compile TiKV java client
 ./.ci/build-client-java.sh
-# compile presto connector
-mvn clean package -DskipTests -am -pl prestodb -Dmysql.driver.scope=compile
-# 解压 plugin
-tar -zxf prestodb/target/prestodb-connector-0.0.5-SNAPSHOT-plugin.tar.gz -C prestodb/target
+# compile Hive Storage Handler，using hive-2.2.0 as an example
+mvn clean package -DskipTests -am -pl hive/hive-2.2.0
 ```
 
 The following parameters are available for compiling:
 
-| parameter            | default | description                                            |
-|----------------------|---------|--------------------------------------------------------|
-| -Dmysql.driver.scope | test    | Whether the dependency `mysql-jdbc-driver` is included |
+| parameter                     | default | description                                                |
+|-------------------------------|---------|------------------------------------------------------------|
+| -Dmysql.driver.scope          | test    | Whether the dependency `mysql-jdbc-driver` is included     |
 
-## 3 Deploy PrestoDB
+## 3 Install Hive Storage Handler
 
-We only present the standalone cluster for testing. If you want to use Presto in production environment, please refer to the [PrestoDB official documentation](https://prestodb.io).
+Both of the following are available.
 
-### 3.1 Download
-
-Please go to [PrestoDB Download Page](https://prestodb.io/download.html) to download the corresponding version of the installation package. Only the latest version of PrestoDB is kept on this page, the historical version can be downloaded here: [PrestoDB Historical Versions](https://repo1.maven.org/maven2/com/facebook/presto/presto-server).
-
-### 3.2 Install TiBigData
+### 3.1 Using ADD JAR syntax
 
 ```bash
-wget https://repo1.maven.org/maven2/com/facebook/presto/presto-server/0.234.2/presto-server-0.234.2.tar.gz
-tar -zxf presto-server-0.234.2.tar.gz
-cd presto-server-0.234.2
-cp -r ${TIBIGDATA_HOME}/prestodb/target/prestodb-connector-0.0.5-SNAPSHOT/tidb plugin
+# upload TiBigData jar to HDFS
+hadoop fs -put $TIBIGDATA_HOME/hive/hive-2.2.0/target/hive-tidb-storage-handler-2.2.0-0.0.5-SNAPSHOT.jar /tmp
+# run add jar sql in hive shell or beeline
+ADD JAR hdfs:///tmp/hive-tidb-storage-handler-2.2.0-0.0.5-SNAPSHOT.jar;
 ```
 
-### 3.3 Config PrestoDB standalone cluster
-
-Here we give a simple configuration to start a standalone PrestoDB cluster.
+### 3.2 Copy lib to hive
 
 ```bash
-cd $PRESTO_HOME
-mkdir -p etc/catalog
+cp $TIBIGDATA_HOME/hive/hive-2.2.0/target/hive-tidb-storage-handler-2.2.0-0.0.5-SNAPSHOT.jar $HIVE_HOME/lib/
 ```
 
-The next step is to configure the PrestoDB configuration files.
-
-#### 3.3.1 Config config.properties
-
-```bash
-vim etc/config.properties
-```
-
-The content of `config.properties`：
-
-```properties
-coordinator=true
-node-scheduler.include-coordinator=true
-http-server.http.port=12345
-query.max-memory=2GB
-query.max-memory-per-node=2GB
-query.max-total-memory-per-node=2GB
-discovery-server.enabled=true
-discovery.uri=http://localhost:12345
-```
-
-#### 3.3.2 Config jvm.properties
-```bash
-vim etc/jvm.config
-```
-
-The content of `jvm.config`：
-
-```properties
--server
--Xmx4G
--XX:+UseConcMarkSweepGC
--XX:+ExplicitGCInvokesConcurrent
--XX:+CMSClassUnloadingEnabled
--XX:+AggressiveOpts
--XX:+HeapDumpOnOutOfMemoryError
--XX:OnOutOfMemoryError=kill -9 %p
--XX:ReservedCodeCacheSize=150M
-```
-#### 3.3.3 Config node.properties
-```bash
-vim etc/node.properties
-```
-
-The content of `node.properties`：
-
-```properties
-# 同一个集群内的所有节点的 environment 应该相同，否则无法进行通信
-node.environment=test
-# 节点的唯一标识，推荐使用 uuid 生成
-node.id=1
-# 日志存放目录
-node.data-dir=/tmp/prestodb/logs
-```
-#### 3.3.4 Config log.properties
-```bash
-vim etc/log.properties
-```
-
-The content of `log.properties`：
-
-```properties
-com.facebook.presto=INFO
-```
-
-#### 3.3.4 Config tidb connector
-```bash
-vim etc/catalog/tidb.properties
-```
-
-The content of `tidb.properties`：
-
-```properties
-# must be tidb
-connector.name=tidb
-tidb.database.url=jdbc:mysql://localhost:4000/test
-tidb.username=root
-tidb.password=
-```
-
-If you have multiple TiDB clusters, you can create multiple properties files, such as `tidb01.properties` and `tidb02.properties`, and just write a different connection string and password for each configuration file.
-
-### 3.4 Start PrestoDB cluster
-
-```bash
-# foreground
-bin/launcher run
-# background
-bin/launcher start
-```
-
-### 3.5 Reading or Writing TiDB by PrestoDB
-
-```bash
-# download prestodb client
-curl -L https://repo1.maven.org/maven2/com/facebook/presto/presto-cli/0.234.2/presto-cli-0.234.2-executable.jar -o prestodb
-chmod 777 prestodb
-# connect to prestodb
-./prestodb --server localhost:12345 --catalog tidb --schema test
-```
+## 4 Reading TiDB by Hive
 
 Using mysql client to create a table in TiDB:
 
 ```bash
-# connect to tidb
+# connect to TiDB
 mysql --host 127.0.0.1 --port 4000 -uroot --database test
 ```
 
+Insert data to TiDB:
+
 ```sql
--- 这段 sql 跑在 TiDB 内
 CREATE TABLE `people`(
   `id` int,
   `name` varchar(16)
 );
+
+INSERT INTO `people`(`id`,`name`) VALUES (1,'zs');
 ```
 
-Using prestodb client to query TiDB schema:
+Create the TiDB mapping table in Hive, where the columns are arbitrary and TiBigData will automatically correct the columns.
 
 ```sql
-show create table people;
+CREATE TABLE `people`(
+ `fake_column` int
+)
+STORED BY
+  'io.tidb.bigdata.hive.TiDBStorageHandler'
+TBLPROPERTIES (
+  'tidb.database.url'='jdbc:mysql://localhost:4000/',
+  'tidb.database.name'='test',
+  'tidb.table.name'='people',
+  'tidb.username'='root',
+  'tidb.password'=''
+ );
+```
+
+Using hive sql to query TiDB schema:
+
+```sql
+SHOW CREATE TABLE `people`;
+```
+
+We can see that the columns of the table have been automatically corrected:
+
+```sql
+hive (default)> SHOW CREATE TABLE `people`;
+OK
+createtab_stmt
+CREATE TABLE `people`(
+  `id` int COMMENT 'from deserializer',
+  `name` string COMMENT 'from deserializer')
+ROW FORMAT SERDE
+  'io.tidb.bigdata.hive.TiDBSerde'
+STORED BY
+  'io.tidb.bigdata.hive.TiDBStorageHandler'
+WITH SERDEPROPERTIES (
+  'serialization.format'='1')
+LOCATION
+  'hdfs://XXX:8020/user/hive/warehouse/people'
+TBLPROPERTIES (
+  'COLUMN_STATS_ACCURATE'='{\"BASIC_STATS\":\"true\"}',
+  'numFiles'='0',
+  'numRows'='0',
+  'rawDataSize'='0',
+  'tidb.database.name'='test',
+  'tidb.database.url'='jdbc:mysql://localhost:4000/',
+  'tidb.password'='',
+  'tidb.table.name'='people',
+  'tidb.username'='root',
+  'totalSize'='0',
+  'transient_lastDdlTime'='1642779466')
+Time taken: 2.276 seconds, Fetched: 23 row(s)
+hive (default)>
+```
+
+Query TiDB in Hive:
+
+```sql
+SELECT * FROM `people`;
 ```
 
 output:
 
 ```sql
-presto:test> show create table people;
-          Create Table
----------------------------------
- CREATE TABLE tidb.test.people (
-    id integer,
-    name varchar(16)
- )
- WITH (
-    primary_key = '',
-    unique_key = ''
- )
-(1 row)
-
-Query 20220105_143658_00002_a26k7, FINISHED, 1 node
-Splits: 1 total, 1 done (100.00%)
-0:00 [0 rows, 0B] [0 rows/s, 0B/s]
-```
-Using prestodb client to insert and select data from TiDB：
-
-```sql
-INSERT INTO "test"."people"("id","name") VALUES(1,'zs');
-SELECT * FROM "test"."people";
-```
-
-output:
-
-```sql
-presto:test> INSERT INTO "test"."people"("id","name") VALUES(1,'zs');
-INSERT: 1 row
-
-Query 20220105_143723_00003_a26k7, FINISHED, 1 node
-Splits: 19 total, 19 done (100.00%)
-0:00 [0 rows, 0B] [0 rows/s, 0B/s]
-
-presto:test> INSERT INTO "test"."people"("id","name") VALUES(1,'zs');
-INSERT: 1 row
-
-Query 20220105_143741_00004_a26k7, FINISHED, 1 node
-Splits: 19 total, 19 done (100.00%)
-0:00 [0 rows, 0B] [0 rows/s, 0B/s]
-
-presto:test> SELECT * FROM "test"."people";
- id | name
-----+------
-  1 | zs
-(1 row)
-
-Query 20220105_143748_00005_a26k7, FINISHED, 1 node
-Splits: 17 total, 17 done (100.00%)
-0:00 [1 rows, 0B] [2 rows/s, 0B/s]
+hive (default)> SELECT * FROM `people`;
+OK
+people.id	people.name
+1	zs
+Time taken: 4.979 seconds, Fetched: 1 row(s)
+hive (default)>
 ```
 
 ## 5 DataTypes
 
-|    TiDB    | PrestoDB  |
-|:----------:|:---------:|
-|  TINYINT   |  TINYINT  |
-|  SMALLINT  | SMALLINT  |
-| MEDIUMINT  |    INT    |
-|    INT     |    INT    |
-|   BIGINT   |  BIGINT   |
-|    CHAR    |  VARCHAR  |
-|  VARCHAR   |  VARCHAR  |
-|  TINYTEXT  |  VARCHAR  |
-| MEDIUMTEXT |  VARCHAR  |
-|    TEXT    |  VARCHAR  |
-|  LONGTEXT  |  VARCHAR  |
-|   BINARY   | VARBINARY |
-| VARBINARY  | VARBINARY |
-|  TINYBLOB  | VARBINARY |
-| MEDIUMBLOB | VARBINARY |
-|    BLOB    | VARBINARY |
-|  LONGBLOB  | VARBINARY |
-|   FLOAT    |   REAL    |
-|   DOUBLE   |  DOUBLE   |
-|  DECIMAL   |  DECIMAL  |
-|    DATE    |   DATE    |
-|    TIME    |   TIME    |
-|  DATETIME  | TIMESTAMP |
-| TIMESTAMP  | TIMESTAMP |
-|    YEAR    | SMALLINT  |
-|    BOOL    |  TINYINT  |
-|    JSON    |   JSON    |
-|    ENUM    |  VARCHAR  |
-|    SET     |  VARCHAR  |
+|     TiDB     |     Hive     |
+|:------------:|:------------:|
+|   TINYINT    |     INT      |
+|   SMALLINT   |     INT      |
+|  MEDIUMINT   |     INT      |
+|     INT      |     INT      |
+|    BIGINT    |    BIGINT    |
+|     CHAR     |    STRING    |
+|   VARCHAR    |    STRING    |
+|   TINYTEXT   |    STRING    |
+|  MEDIUMTEXT  |    STRING    |
+|     TEXT     |    STRING    |
+|   LONGTEXT   |    STRING    |
+|    BINARY    |    BYTES     |
+|  VARBINARY   |    BYTES     |
+|   TINYBLOB   |    BYTES     |
+|  MEDIUMBLOB  |    BYTES     |
+|     BLOB     |    BYTES     |
+|   LONGBLOB   |    BYTES     |
+|    FLOAT     |    FLOAT     |
+|    DOUBLE    |    DOUBLE    |
+| DECIMAL(p,s) | DECIMAL(p,s) |
+|     DATE     |     DATE     |
+|     TIME     |    STRING    |
+|   DATETIME   |  TIMESTAMP   |
+|  TIMESTAMP   |  TIMESTAMP   |
+|     YEAR     |     INT      |
+|     BOOL     |   BOOLEAN    |
+|     JSON     |    STRING    |
+|     ENUM     |    STRING    |
+|     SET      |    STRING    |
 
 ## 6 Configuration
 
@@ -277,10 +193,11 @@ Splits: 17 total, 17 done (100.00%)
 | tidb.jdbc.connection-provider-impl | io.tidb.bigdata.tidb.JdbcConnectionProviderFactory.BasicJdbcConnectionProvider | JDBC connection provider implements: set 'io.tidb.bigdata.tidb.JdbcConnectionProviderFactory.HikariDataSourceJdbcConnectionProvider', TiBigData will use JDBC connection pool implemented by [HikariCP](https://github.com/brettwooldridge/HikariCP) to provider connection; set 'io.tidb.bigdata.tidb.JdbcConnectionProviderFactory.BasicJdbcConnectionProvider', connection pool will not be used.                                                      |
 | tidb.maximum.pool.size             | 10                                                                             | Connection pool size.                                                                                                                                                                                                                                                                                                                                                                                                                                     |
 | tidb.minimum.idle.size             | 10                                                                             | The minimum number of idle connections that HikariCP tries to maintain in the pool.                                                                                                                                                                                                                                                                                                                                                                       |
-| tidb.write_mode                    | append                                                                         | TiDB sink write mode: `upsert` or `append`. You could config it in `tidb.properties`, or set it by `SET SESSION tidb.write_mode='upsert'` within a session. TiDB primary key columns and unique key columns will be mapped as presto table properties `primary_key` and `unique_key`.                                                                                                                                                                     |
 | tidb.replica-read                  | leader                                                                         | Read data from specified role. The optional roles are leader, follower and learner. You can also specify multiple roles, and we will pick the roles you specify in order.                                                                                                                                                                                                                                                                                 |
 | tidb.replica-read.label            | null                                                                           | Only select TiKV store match specified labels. Format: label_x=value_x,label_y=value_y                                                                                                                                                                                                                                                                                                                                                                    |
 | tidb.replica-read.whitelist        | null                                                                           | Only select TiKV store with given ip addresses.                                                                                                                                                                                                                                                                                                                                                                                                           |
 | tidb.replica-read.blacklist        | null                                                                           | Do not select TiKV store with given ip addresses.                                                                                                                                                                                                                                                                                                                                                                                                         |
 | tidb.snapshot_timestamp            | null                                                                           | It is available for TiDB connector to read snapshot. You could set it by `SET SESSION tidb.snapshot_timestamp='2021-01-01T14:00:00+08:00'` and unset it by `SET SESSION tidb.snapshot_timestamp=''` within a session. The format of timestamp may refer to `java.time.format.DateTimeFormatter#ISO_ZONED_DATE_TIME`.                                                                                                                                      |
 | tidb.dns.search                    | null                                                                           | Append dns search suffix to host names. It's especially necessary to map K8S cluster local name to FQDN.                                                                                                                                                                                                                                                                                                                                                  |
+
+
