@@ -1,18 +1,239 @@
 # PrestoSQL-TiDB-Connector
 
-## Build
+## 1 Environment
+
+| Component | Version |
+|-----------|---------|
+| JDK       | 8       |
+| Maven     | 3.6+    |
+| PrestoSQL | 0.234.2 |
+
+## 2 Compile PrestoSQL Connector
+
+Please refer to the following steps, as the comments say, you need to compile the TiKV java client before you compile TiBigData, because TiBigData preempts some new features that are not released in the TiKV java client.
 
 ```bash
+# clone project
 git clone git@github.com:tidb-incubator/TiBigData.git
 cd TiBigData
-# need Java 11
-mvn clean package -DskipTests -am -pl prestosql
-tar -zxf prestosql/target/prestosql-connector-0.0.4-SNAPSHOT-plugin.tar.gz -C prestosql/target
-cp -r prestosql/target/prestosql-connector-0.0.4-SNAPSHOT/tidb ${PRESTO_HOME}/plugin
-cp ${YOUR_MYSQL_JDBC_DRIVER_PATH}/mysql-connector-java-${version}.jar ${PRESTO_HOME}/plugin/tidb
+# compile TiKV java client
+./.ci/build-client-java.sh
+# compile presto connector
+mvn clean package -DskipTests -am -pl prestosql -Dmysql.driver.scope=compile
+# 解压 plugin
+tar -zxf prestosql/target/prestosql-connector-0.0.5-SNAPSHOT-plugin.tar.gz -C prestosql/target
 ```
 
-## DataTypes
+The following parameters are available for compiling:
+
+| parameter            | default | description                                            |
+|----------------------|---------|--------------------------------------------------------|
+| -Dmysql.driver.scope | test    | Whether the dependency `mysql-jdbc-driver` is included |
+
+## 3 Deploy PrestoSQL
+
+We only present the standalone cluster for testing. If you want to use Presto in production environment, please refer to the [PrestoSQL official documentation](https://trino.io).
+
+### 3.1 Download
+
+Please go to [PrestoSQL Download Page](https://repo1.maven.org/maven2/io/prestosql/presto-server) to download the corresponding version of the installation package.
+
+### 3.2 Install TiBigData
+
+```bash
+wget https://repo1.maven.org/maven2/io/prestosql/presto-server/350/presto-server-350.tar.gz
+tar -zxf presto-server-0.234.2.tar.gz
+cd presto-server-0.234.2
+cp -r ${TIBIGDATA_HOME}/prestosql/target/prestosql-connector-0.0.5-SNAPSHOT/tidb plugin
+```
+
+### 3.3 Config PrestoSQL standalone cluster
+
+Here we give a simple configuration to start a standalone PrestoSQL cluster.
+
+```bash
+cd $PRESTO_HOME
+mkdir -p etc/catalog
+```
+
+The next step is to configure the PrestoSQL configuration files.
+
+#### 3.3.1 Config config.properties
+
+```bash
+vim etc/config.properties
+```
+
+The content of `config.properties`：
+
+```properties
+coordinator=true
+node-scheduler.include-coordinator=true
+http-server.http.port=12345
+query.max-memory=2GB
+query.max-memory-per-node=2GB
+query.max-total-memory-per-node=2GB
+discovery-server.enabled=true
+discovery.uri=http://localhost:12345
+```
+
+#### 3.3.2 Config jvm.properties
+```bash
+vim etc/jvm.config
+```
+
+The content of `jvm.config`：
+
+```properties
+-server
+-Xmx4G
+-XX:+UseConcMarkSweepGC
+-XX:+ExplicitGCInvokesConcurrent
+-XX:+CMSClassUnloadingEnabled
+-XX:+AggressiveOpts
+-XX:+HeapDumpOnOutOfMemoryError
+-XX:OnOutOfMemoryError=kill -9 %p
+-XX:ReservedCodeCacheSize=150M
+```
+#### 3.3.3 Config node.properties
+```bash
+vim etc/node.properties
+```
+
+The content of `node.properties`：
+
+```properties
+# 同一个集群内的所有节点的 environment 应该相同，否则无法进行通信
+node.environment=test
+# 节点的唯一标识，推荐使用 uuid 生成
+node.id=1
+# 日志存放目录
+node.data-dir=/tmp/prestosql/logs
+```
+#### 3.3.4 Config log.properties
+```bash
+vim etc/log.properties
+```
+
+The content of `log.properties`：
+
+```properties
+com.facebook.presto=INFO
+```
+
+#### 3.3.4 Config tidb connector
+```bash
+vim etc/catalog/tidb.properties
+```
+
+The content of `tidb.properties`：
+
+```properties
+# must be tidb
+connector.name=tidb
+tidb.database.url=jdbc:mysql://localhost:4000/test
+tidb.username=root
+tidb.password=
+```
+
+If you have multiple TiDB clusters, you can create multiple properties files, such as `tidb01.properties` and `tidb02.properties`, and just write a different connection string and password for each configuration file.
+
+### 3.4 Start PrestoSQL cluster
+
+```bash
+# foreground
+bin/launcher run
+# background
+bin/launcher start
+```
+
+### 3.5 Reading or Writing TiDB by PrestoSQL
+
+```bash
+# download prestosql client
+curl -L https://repo1.maven.org/maven2/io/prestosql/presto-cli/350/presto-cli-350-executable.jar -o prestosql
+chmod 777 prestosql
+# connect to prestosql
+./prestosql --server localhost:12345 --catalog tidb --schema test
+```
+
+Using mysql client to create a table in TiDB:
+
+```bash
+# connect to tidb
+mysql --host 127.0.0.1 --port 4000 -uroot --database test
+```
+
+```sql
+-- 这段 sql 跑在 TiDB 内
+CREATE TABLE `people`(
+  `id` int,
+  `name` varchar(16)
+);
+```
+
+Using prestosql client to query TiDB schema:
+
+```sql
+show create table people;
+```
+
+output:
+
+```sql
+presto:test> show create table people;
+          Create Table
+---------------------------------
+ CREATE TABLE tidb.test.people (
+    id integer,
+    name varchar(16)
+ )
+ WITH (
+    primary_key = '',
+    unique_key = ''
+ )
+(1 row)
+
+Query 20220105_143658_00002_a26k7, FINISHED, 1 node
+Splits: 1 total, 1 done (100.00%)
+0:00 [0 rows, 0B] [0 rows/s, 0B/s]
+```
+Using prestosql client to insert and select data from TiDB：
+
+```sql
+INSERT INTO "test"."people"("id","name") VALUES(1,'zs');
+SELECT * FROM "test"."people";
+```
+
+output:
+
+```sql
+presto:test> INSERT INTO "test"."people"("id","name") VALUES(1,'zs');
+INSERT: 1 row
+
+Query 20220105_143723_00003_a26k7, FINISHED, 1 node
+Splits: 19 total, 19 done (100.00%)
+0:00 [0 rows, 0B] [0 rows/s, 0B/s]
+
+presto:test> INSERT INTO "test"."people"("id","name") VALUES(1,'zs');
+INSERT: 1 row
+
+Query 20220105_143741_00004_a26k7, FINISHED, 1 node
+Splits: 19 total, 19 done (100.00%)
+0:00 [0 rows, 0B] [0 rows/s, 0B/s]
+
+presto:test> SELECT * FROM "test"."people";
+ id | name
+----+------
+  1 | zs
+(1 row)
+
+Query 20220105_143748_00005_a26k7, FINISHED, 1 node
+Splits: 17 total, 17 done (100.00%)
+0:00 [1 rows, 0B] [2 rows/s, 0B/s]
+```
+
+## 5 DataTypes
 
 |     TiDB     |  PrestoSQL   |
 |:------------:|:------------:|
@@ -46,7 +267,7 @@ cp ${YOUR_MYSQL_JDBC_DRIVER_PATH}/mysql-connector-java-${version}.jar ${PRESTO_H
 |     ENUM     |   VARCHAR    |
 |     SET      |   VARCHAR    |
 
-## Configuration
+## 6 Configuration
 
 | Configuration                      | Default Value                                                                  | Description                                                                                                                                                                                                                                                                                                                                                                                                                                               |
 |:-----------------------------------|:-------------------------------------------------------------------------------|:----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
@@ -63,143 +284,3 @@ cp ${YOUR_MYSQL_JDBC_DRIVER_PATH}/mysql-connector-java-${version}.jar ${PRESTO_H
 | tidb.replica-read.blacklist        | null                                                                           | Do not select TiKV store with given ip addresses.                                                                                                                                                                                                                                                                                                                                                                                                         |
 | tidb.snapshot_timestamp            | null                                                                           | It is available for TiDB connector to read snapshot. You could set it by `SET SESSION tidb.snapshot_timestamp='2021-01-01T14:00:00+08:00'` and unset it by `SET SESSION tidb.snapshot_timestamp=''` within a session. The format of timestamp may refer to `java.time.format.DateTimeFormatter#ISO_ZONED_DATE_TIME`.                                                                                                                                      |
 | tidb.dns.search                    | null                                                                           | Append dns search suffix to host names. It's especially necessary to map K8S cluster local name to FQDN.                                                                                                                                                                                                                                                                                                                                                  |
-
-## Usage
-
-### Properties
-
-```bash
-vim ${PRESTO_HOME}/etc/catalog/tidb.properties
-```
-
-The file `tidb.properties` like :
-
-```properties
-# connector name, must be tidb
-connector.name=tidb
-tidb.database.url=jdbc:mysql://host:port/database
-tidb.username=root
-tidb.password=123456
-tidb.maximum.pool.size=1
-tidb.minimum.idle.size=1
-tidb.write_mode=upsert
-```
-
-Then restart your presto cluster and use presto-cli to connect presto coordinator:
-
-```bash
-presto-cli --server ${COORDINATOR_HOST}:${PORT} --catalog tidb --schema ${TIDB_DATABASE} --user ${USERNAME}
-```
-
-#### Example
-
-```sql
--- show tables
-SHOW TABLES;
--- show databases
-SHOW SCHEMAS;
--- create table
-CREATE TABLE IF NOT EXISTS ${TABLE_NAME} (id INT, name VARCHAR(255), sex VARCHAR(255));
--- show table schema
-SHOW CREATE TABLE ${TABLE_NAME};
--- drop table
-DROP TABLE IF EXISTS ${TABLE_NAME};
--- query
-SELECT * FROM ${TABLE_NAME} LIMIT 100;
--- rename table
-ALTER TABLE ${TABLE_NAME} RENAME TO ${NEW_TABLE_NAME};
--- add column
-ALTER TABLE ${TABLE_NAME} ADD COLUMN ${COLUMN_NAME} ${COLUMN_TYPE};
--- drop column
-ALTER TABLE ${TABLE_NAME} DROP COLUMN ${COLUMN_NAME};
--- rename column
-ALTER TABLE ${TABLE_NAME} RENAME COLUMN ${COLUMN_NAME} TO ${NEW_COLUMN_NAME};
--- synchronize data between tidb table and other tables
-CREATE TABLE ${CATALOG}.${DATABASE}.${TABLE} AS SELECT * FROM ${CATALOG}.${DATABASE}.${TABLE};
--- tidb to hive
-CREATE TABLE hive.default.people AS SELECT * FROM tidb.default.people;
--- hive to tidb
-CREATE TABLE tidb.default.people AS SELECT * FROM hive.default.people;
--- enable upsert mode
-SET SESSION tidb.write_mode='upsert';
-```
-#### Insert and Upsert
-
-You could create a tidb table which contains most tidb types by the following script.
-
-```sql
-CREATE TABLE `default`.`test_tidb_type`(
- c1     tinyint,
- c2     smallint,
- c3     mediumint,
- c4     int,
- c5     bigint,
- c6     char(10),
- c7     varchar(20),
- c8     tinytext,
- c9     mediumtext,
- c10    text,
- c11    longtext,
- c12    binary(20),
- c13    varbinary(20),
- c14    tinyblob,
- c15    mediumblob,
- c16    blob,
- c17    longblob,
- c18    float,
- c19    double,
- c20    decimal(6,3),
- c21    date,
- c22    time,
- c23    datetime,
- c24    timestamp,
- c25    year,
- c26    boolean,
- c27    json,
- c28    enum('1','2','3'),
- c29    set('a','b','c')
-);
-```
-
-Then insert data and query this test table:
-
-```sql
-INSERT INTO test_tidb_type(
- c1,c2,c3,c4,c5,c6,c7,c8,c9,c10,
- c11,c12,c13,c14,c15,c16,c17,c18,c19,c20,
- c21,c22,c23,c24,c25,c26,c27,c28,c29
-)
-VALUES (
- tinyint '1',
- smallint '2',
- int '3',
- int '4',
- bigint '5',
- 'chartype',
- 'varchartype',
- 'tinytexttype',
- 'mediumtexttype',
- 'texttype',
- 'longtexttype',
- varbinary 'binarytype',
- varbinary 'varbinarytype',
- varbinary 'tinyblobtype',
- varbinary 'mediumblobtype',
- varbinary 'blobtype',
- varbinary 'longblobtype',
- 1.234,
- 2.456789,
- 123.456,
- date '2020-08-10',
- time '15:30:29',
- timestamp '2020-08-10 15:30:29',
- timestamp '2020-08-10 16:30:29',
- smallint '2020',
- tinyint '1',
- '{"a":1,"b":2}',
- '1',
- 'a'
-);
--- query
-select * from test_tidb_type;
-```
